SERVER-40009 Honor the initial sync flag when in startup without FCV document

(cherry picked from commit c0c64c95637f8f0700ac40e89dc39c30ec6f5f41)